--- a/index.html
+++ b/index.html
@@ -46,13 +46,10 @@
                 <h2><b id="c_count"></b> out of a total of <b id="count"></b> tools</h2>
             </hgroup>
             <div class="featured-tools-container" id="featured-tools-container" ></div>
+            <div class="load-next-btn " id="load-next-btn"></div>
         </section>
 
-        <div class="apply-filter-btn">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdXGiQBAVMQy3lXGkNdRwqgfWw20E_VlXODYloiMo7L3bwYCw/viewform?usp=sf_link" style="text-decoration: none;">
-                <button id="filter_btn" style="color: black; background-color: #ddd;">Contact Us</button>
-            </a>
-        </div>
+        
     </main>
 
     <div class="footer">
