Fix: Correct videi url on tool page

--- a/tool.html
+++ b/tool.html
@@ -18,7 +18,7 @@
             <li><a href="index.html" style="color: rgb(106, 103, 103);">Home of No-Code AI Tools</a></li>
         </ul>
         <ul>
-            <li><a href="videos.html">Video Demos</a></li>
+            <li><a href="video.html">Video Demos</a></li>
             <li><a href="https://myinsightiq.com/">myInsightIQ</a></li>
         </ul>
     </nav>
